<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:background="#000000"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/circular_bordershape">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:cardCornerRadius="15dp">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/wood"
                        android:layout_height="match_parent"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <TextView
                android:id="@+id/post_user"
                android:layout_toEndOf="@id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vicky"
                android:textSize="12sp"
                android:fontFamily="serif"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_user"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/relativeLayout1"
                android:text="@string/time"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_user"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/time"
                android:text="@string/date"
                android:textColor="#ffffff" />

            <LinearLayout
                android:id="@+id/linear_layout_post"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:background="#000000"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/post_image"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/post_title_txtview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:text="@string/post_title"/>

                <TextView
                    android:id="@+id/post_desc_txtview"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:text="@string/post_description"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000000"
                android:src="@drawable/dislike"/>
            <TextView
                android:id="@+id/likes_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:padding="5dp"
                android:text="@string/_0"
                android:textSize="14sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#ff0000"
                android:text="@string/likes"
                />

            <ImageButton
                android:background="#000000"
                android:padding="15dp"
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"


                android:src="@drawable/comment"/>

            </LinearLayout>



        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>